# mobile-coverage-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Caddyfile.local  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/processed/: antennas.parquet
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.vue  types.ts
locust/: locustfile.py
locust/results/: report.html  stats_stats.csv
scripts/: preprocess.py
src/coverage/: config.py  main.py  middleware.py  router.py
src/coverage/services/: coverage.py  geocoding.py
src/mobile_coverage/: config.py  logging_config.py  main.py  models.py  router.py
src/mobile_coverage/data/: loader.py
src/mobile_coverage/services/: coverage.py  geocoding.py
tests/integration/: test_router.py
tests/unit/: test_coverage.py  test_geocoding.py  test_logging.py  test_models.py  test_preprocess.py
