[project]
name = "mobile-coverage-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scipy>=1.18.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "locust>=2.44.4",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config", "--showlocals"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == '__main__':",
    "@overload",
    "@abc.abstractmethod",
    "raise NotImplementedError",
]
